--- a/index.html
+++ b/index.html
@@ -225,6 +225,12 @@ section h2 {
 #contact a:hover { text-decoration:underline; }
 #contact p { color:#fff; }
 
+
+  /* قسم ملفات PDF */
+#pdfs {
+  margin-bottom:100px; /* مسافة كبيرة بين PDF وContact */
+}
+
 /*==============================
   الفوتر Footer
 ==============================*/
@@ -369,6 +375,7 @@ loadMoreBtn.addEventListener('click', () => {
 
 </body>
 </html>
+
 
 
 
