--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@ header div p {
   color:#f0f0f0; 
   text-shadow:1px 1px 4px rgba(0,0,0,0.3); 
 }
+/* تحسين المسافات بين الأقسام */
+#about {
+  margin-bottom:100px; /* فراغ بين About و Video Lessons */
+}
+
+#videos {
+  margin-bottom:100px; /* فراغ بين Video Lessons و PDFs */
+}
 
 /*==============================
   الأقسام Sections
@@ -375,6 +383,7 @@ loadMoreBtn.addEventListener('click', () => {
 
 </body>
 </html>
+
 
 
 
