--- a/index.html
+++ b/index.html
@@ -300,20 +300,36 @@ footer a { color:#42a5f5; text-decoration:none; }
   <button id="loadMoreBtn">Load More</button>
 </section>
 
-<!-- قسم ملفات PDF -->
+<!--==============================
+  قسم ملفات PDF - Downloadable PDFs
+  يتيح للزائر تحميل ملفات تعليمية مختلفة
+==============================-->
 <section id="pdfs">
   <h2>Downloadable PDFs</h2>
   <div class="resources">
+    
+<!-- ---------------------------------------------------------------------------------->
+    <!-- ملف PDF الأول: عبارات المطار -->
     <div class="pdfBox">
       <h3>30 Airport Phrases</h3>
       <a href="30_Airport_Phrases.pdf" download>Download PDF</a>
     </div>
+
+    <!-- ملف PDF الثاني: عبارات المطعم باللهجة المصرية -->
     <div class="pdfBox">
       <h3>30 Restaurant Phrases</h3>
       <a href="30_Restaurant_Phrases_Egyptian_Arabic.pdf" download>Download PDF</a>
     </div>
+
+    <!-- ملف PDF الثالث: 30 عبارة للتحيات العربية -->
+    <div class="pdfBox">
+      <h3>30 Arabic Greetings</h3>
+      <a href="30_Arabic_Greetings_Fancy.pdf" download>Download PDF</a>
+    </div>
+
   </div>
 </section>
+<!-- ---------------------------------------------------------------------------------->
 
 <!-- قسم التواصل Contact -->
 <section id="contact">
@@ -383,6 +399,7 @@ loadMoreBtn.addEventListener('click', () => {
 
 </body>
 </html>
+
 
 
 
