--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Spoken Arabic Now – Egyptian Dialect</title>
 
+ <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3B4X87QT7K"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-3B4X87QT7K');
+  </script>
+
+  
 <style>
 /*==============================
   إعدادات أساسية وإعادة تعيين
@@ -399,6 +410,7 @@ loadMoreBtn.addEventListener('click', () => {
 
 </body>
 </html>
+
 
 
 
